--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Personalized Career & Education Advisor - Discover your ideal career path through comprehensive assessment" />
     <meta name="author" content="Disha Platform" />
 
-    <meta property="og:title" content="Disha - Career Guidance Platform" />
+    <meta property="og:title" content="Disha - One Stop Career Advisor" />
     <meta property="og:description" content="Personalized Career & Education Advisor - Discover your ideal career path through comprehensive assessment" />
     <meta property="og:type" content="website" />
 
