--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Disha - Career Guidance Platform</title>
+    <title>Disha - One Stop Career Guidance</title>
     <meta name="description" content="Personalized Career & Education Advisor - Discover your ideal career path through comprehensive assessment" />
     <meta name="author" content="Disha Platform" />
 
